iniciando version 3 en frontend de multiva

--- a/resumen.html
+++ b/resumen.html
@@ -262,7 +262,7 @@
 
         <script>
 
-            var requestSummary = new requestSummary();
+            const requestSummary = new requestSummary(new formSummary(),new TableSummary());
         
         </script>
 
