--- a/resumen.html
+++ b/resumen.html
@@ -259,6 +259,7 @@
         <!-- Developed -->
         <script src="assets/js/conversion.js"></script>
         <script src="assets/js/formsummary.js"></script>
+        <script src="assets/js/tablesummary.js"></script>
 
         <script>
 
