mostrando nuevo resumen

--- a/resumen.html
+++ b/resumen.html
@@ -263,7 +263,7 @@
 
         <script>
 
-            const requestSummary = new requestSummary(new formSummary(),new TableSummary());
+            const requestSummary = new requestSummary("http://35.243.156.112/servicio/balanza/resumen/mensual/3",new formSummary(),new TableSummary());
         
         </script>
 
