mostrando nuevo resumen

--- a/resumen.html
+++ b/resumen.html
@@ -260,6 +260,8 @@
         <script src="assets/js/conversion.js"></script>
         <script src="assets/js/formsummary.js"></script>
         <script src="assets/js/tablesummary.js"></script>
+        <script src="assets/js/requestsummary.js"></script>
+
 
         <script>
 
