--- a/resumen.html
+++ b/resumen.html
@@ -265,7 +265,7 @@
 
         <script>
 
-            const requestSummary = new RequestSummary("http://35.243.156.112/servicio/balanza/resumen",new formSummary(),new TableSummary());
+            const requestSummary = new RequestSummary("http://35.243.156.112/servicio/balanza/resumen",new FormSummary(),new TableSummary());
         
         </script>
 
