mostrando nuevo resumen

--- a/resumen.html
+++ b/resumen.html
@@ -204,11 +204,11 @@
 
                         			<h4 class="header-title m-t-0 m-b-30">TABLA</h4>
 
-                                    <table id="datatable" class="table table-stripped">
+                                    <div id="sumTable">
 
 
 
-                                    </table>
+                                    </div>
 
                                 </div>
                             </div><!-- end col -->
