mostrando nuevo resumen

--- a/resumen.html
+++ b/resumen.html
@@ -204,7 +204,7 @@
 
                         			<h4 class="header-title m-t-0 m-b-30">TABLA</h4>
 
-                                    <div id="datatable" class="table table-stripped">
+                                    <table id="datatable" class="table table-stripped">
 
 
 
