--- a/resumen.html
+++ b/resumen.html
@@ -267,10 +267,13 @@
 
             $(document).ready(function () {
 
+                $("#btnSummary").click(function(){
+
                 var requestSummary = new RequestSummary("http://35.243.156.112/servicio/balanza/resumen",new FormSummary(),new TableSummary());
 
+                });
             });
-        
+            
         </script>
 
     </body>
